--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,9 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Connector"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/com.sun.enterprise.jst.server.runtimeTarget/GlassFish 3.1.2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenEJB"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate4"/>
+	<classpathentry kind="lib" path="D:/libs/apache-openejb-4.5.2/openejb-javaagent-3.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
